<resources>
    <string name="app_name">BrighterBrain</string>
    <string name="action_settings">Settings</string>
    <string name="txt_name">Name</string>
    <string name="txt_id">ID</string>
    <string name="txt_description">Description</string>
    <string name="txt_location">Location</string>
    <string name="txt_image">Image</string>
    <string name="txt_cost">Cost</string>
    <string name="compulsory">This field is mandatory</string>
    <string name="txt_save">SAVE</string>
    <string name="txt_cancel">CANCEL</string>
    <string name="txt_close">CLOSE</string>
    <string name="txt_collection">Collections</string>
    <string name="txt_new_item">New item</string>
    <string name="txt_item_detail">Item detail</string>
    <string name="parse_app_id">Htc100v3GZPA40zdeLGWfSmw0J0k5EXp8RHc9DZ2</string>
    <string name="parse_client_key">0Phpq6SIzljZfzPthzxmE8hk4PCdqwWRYBbPraaM</string>
    <string name="wait">Please wait</string>
    <string name="saving">Saving</string>
</resources>
